hphp/hack/test/typecheck/memoize/tuple_of_bad_class.php.exp
File "tuple_of_bad_class.php", line 7, characters 36-38:
This is an object of type Bar (Typing[4149])
File "tuple_of_bad_class.php", line 7, characters 49-52:
Parameters to memoized function must be null, bool, int, float, string, an object deriving IMemoizeParam, or a Container thereof. See also http://docs.hhvm.com/hack/attributes/special#__memoize
