hphp/hack/test/typecheck/memoize/tuple_of_bad_class.php
<?hh // strict

class Bar {}

class Foo {
  <<__Memoize>>
  public function someMethod((int, Bar, string) $tup): void {}
}
